welcome-app/demo-manifests/backend-service.yaml
# Uh oh, no name is specified on the service port.
# Istio can't identify a protocol.

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: welcome-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      # name: http
